--- a/settings.json
+++ b/settings.json
@@ -3,6 +3,8 @@
     "editor.fontSize": 14,
     "workbench.colorTheme": "Solarized Light",
     "editor.lineNumbers": "off",
+    "editor.minimap.enabled": false,
+    "editor.dragAndDrop": false,
     "workbench.welcome.enabled": false,
     "workbench.colorCustomizations": {
         "editor.foreground": "#657b83"
