--- a/settings.json
+++ b/settings.json
@@ -6,6 +6,7 @@
     "workbench.colorTheme": "Solarized Light",
     "editor.lineNumbers": "off",
     "workbench.welcome.enabled": false,
+    "editor.minimap.enabled": false,
     "workbench.colorCustomizations": {
         "editor.foreground": "#657b83"
     }
