--- a/settings.json
+++ b/settings.json
@@ -8,5 +8,6 @@
     "workbench.welcome.enabled": false,
     "workbench.colorCustomizations": {
         "editor.foreground": "#657b83"
-    }
+    },
+    "gitlens.blame.annotation.activeLine": "off"
 }
