key bindings and Iosevka

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,6 @@
 {
     "workbench.activityBar.visible": false,
+    "editor.fontFamily": "Iosevka, Monaco",
     "editor.fontSize": 14,
     "workbench.colorTheme": "Solarized Light",
     "editor.lineNumbers": "off",
