--- a/settings.json
+++ b/settings.json
@@ -6,6 +6,7 @@
     "editor.minimap.enabled": false,
     "editor.wordWrap": "on",
     "gitlens.blame.line.enabled": false,
+    "gitlens.codeLens.enabled": false,
     "window.menuBarVisibility": "toggle",
     "workbench.activityBar.visible": false,
     "workbench.colorCustomizations": {
