--- a/settings.json
+++ b/settings.json
@@ -22,5 +22,6 @@
         "suppressNoRepositoryWarning": false,
         "suppressUpdateNotice": true,
         "suppressWelcomeNotice": false
-    }
+    },
+    "git.autofetch": true
 }
