--- a/settings.json
+++ b/settings.json
@@ -9,7 +9,6 @@
     },
     "editor.wordWrap": "on",
     "gitlens.blame.line.enabled": false,
-    "gitlens.codeLens.enabled": false,
     "workbench.activityBar.visible": false,
     "workbench.colorCustomizations": {
         "editor.foreground": "#657b83"
@@ -23,6 +22,8 @@
         "suppressGitVersionWarning": false,
         "suppressLineUncommittedWarning": false,
         "suppressNoRepositoryWarning": false,
+        "suppressResultsExplorerNotice": false,
+        "suppressShowKeyBindingsNotice": true,
         "suppressUpdateNotice": true,
         "suppressWelcomeNotice": false
     },
@@ -34,5 +35,11 @@
         "strings": false
       }
     },
-    "window.menuBarVisibility": "toggle"
+    "window.menuBarVisibility": "toggle",
+    "gitlens.codeLens.enabled": false,
+    "gitlens.currentLine.enabled": false,
+    "gitlens.hovers.currentLine.enabled": false,
+    "gitlens.keymap": "alternate",
+    "latex-workshop.view.pdf.viewer": "tab",
+    "workbench.startupEditor": "newUntitledFile"
 }
