updated settings in new release

--- a/settings.json
+++ b/settings.json
@@ -55,5 +55,7 @@
         "strings": false
       }
     },
-    "window.menuBarVisibility": "toggle"
+    "window.menuBarVisibility": "toggle",
+    "workbench.startupEditor": "newUntitledFile",
+    "latex-workshop.view.pdf.viewer": "tab"
 }
