disable feedback icon

--- a/settings.json
+++ b/settings.json
@@ -57,5 +57,6 @@
     },
     "window.menuBarVisibility": "toggle",
     "workbench.startupEditor": "newUntitledFile",
-    "latex-workshop.view.pdf.viewer": "tab"
+    "latex-workshop.view.pdf.viewer": "tab",
+    "workbench.statusBar.feedback.visible": false
 }
