--- a/settings.json
+++ b/settings.json
@@ -65,6 +65,6 @@
       "default": "right",
       "jupyter-notebook": "left"
     },
-    "python.defaultInterpreterPath": "/home/mmakowski/opt/anaconda3/envs/37/bin/python",
-    "python.languageServer": "Microsoft"
+    "python.defaultInterpreterPath": "/home/mmakowski/opt/anaconda3/envs/datasci/bin/python",
+    "python.languageServer": "Default"
 }
